[tool.poetry]
name = "eliona.api_client2"
version = "2.6.0"
description = "Eliona REST API"
authors = ["Eliona by IoTEC AG <hello@eliona.io>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/eliona-smart-building-assistant/python-eliona-api-client"
keywords = ["OpenAPI", "OpenAPI-Generator", "Eliona REST API"]
include = ["eliona.api_client2/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
